[package]
name = "casperlabs-cep47"
version = "0.2.0"
edition = "2018"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
license = "MIT"
description = "this package have basic functionalities for CasperLabs CEP47 Contract"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
renvm-sig = "0.1.1"
hex = { version = "0.4.3", default-features = false }
cryptoxide = "0.3.3"
