[package]
name = "compound-casper-erc20"
version = "0.1.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"
license = "MIT"
description = "Modified casper-erc20 according to compound specification"
documentation = "https://docs.rs/casper-erc20"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/erc20"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]