[package]
name = "compound-erc20"
version = "0.1.0"
authors = ["Bassam Monib <bassam.munib@scytalelabs.com>"]
edition = "2018"
license = "MIT"
description = "this package has compound specified erc20 implementation"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.2"
compound-casper-erc20 = "0.1.0"