[package]
name = "casperlabs-dragon-lair-utils"
version = "0.1.1"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
license = "MIT"
description = "this package have basic utilities for CasperLabs Dragon Lair Contract"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper_types_derive = "0.1.0"
casperlabs-contract-utils = "0.1.0"
hex = "0.4.3"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]