[package]
name = "casperlabs-erc20"
version = "0.2.1"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
description = "A Basic Erc20 Implementation"
license = "MIT"


[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.4"
casperlabs-contract-utils = "0.1.0"
cryptoxide = "0.3.3"
hex = { version = "0.4.3", default-features = false }
renvm-sig = "0.1.1 "

[features]
default = ["casper-contract/std", "casper-types/std"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

