[package]
name = "casperlabs-erc20"
version = "0.2.2"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
description = "A Basic Erc20 Implementation"
license = "MIT"


[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"
cryptoxide = "0.3.3"
renvm-sig = "0.1.1 "
hex = { version = "0.4.3", default-features = false }

[features]
default = ["casper-contract/std", "casper-types/std"]

[patch.crates-io]
renvm-sig = { git = 'https://github.com/Scytalelabs-official/CasperLabs-renvm-sig.git', branch = 'main' }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

