[package]
name = "casperlabs-erc20"
version = "0.3.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
description = "A Basic Erc20 Implementation"
license = "MIT"


[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.1.0"

[features]
default = ["casper-contract/std", "casper-types/std"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

