[package]
name = "casperlabs-erc20"
version = "2.0.0"
authors = ["Muhammad Adrees <muhammad.adrees@scytalelabs.com>"]
edition = "2018"
description = "A Basic Erc20 Implementation with New CasperLabs Crate"
license = "MIT"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casperlabs-contract-utils = "0.2.0"
casper-erc20-crate = "0.1.0"